trunk/OldArchive/168ce299e147c26fcaa869e8303e7812-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:34:20: error: field ‘overloadedMethod’ has incomplete type
     friend const A overloadedMethod<A>(const A& lhs, const A& rhs);
                    ^
main.cpp:34:20: error: expected ‘;’ at end of member declaration
main.cpp:34:36: error: expected unqualified-id before ‘<’ token
     friend const A overloadedMethod<A>(const A& lhs, const A& rhs);
                                    ^
main.cpp: In instantiation of ‘const T overloadedMethod(const T&, const T&) [with T = A]’:
main.cpp:48:27:   required from here
main.cpp:27:9: error: ‘int AbstractA::value’ is protected
     int value;
         ^
main.cpp:9:23: error: within this context
     return T(lhs.value+rhs.value);
                       ^
main.cpp:27:9: error: ‘int AbstractA::value’ is protected
     int value;
         ^
main.cpp:9:23: error: within this context
     return T(lhs.value+rhs.value);
                       ^
